<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorFont"
            android:layout_marginTop="100dp"
            android:layout_gravity="left"
            android:text="@string/subtitle_info"/>

        <TextView
            android:id="@+id/info_subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"
            android:textColor="@color/colorFont"
            android:text="@string/subtitle_info2"/>

        <TextView
            android:id="@+id/info_subtitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"
            android:textColor="@color/colorFont"
            android:text="@string/subtitle_info3"/>

        <TextView
            android:id="@+id/info_subtitle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"
            android:textColor="@color/colorFont"
            android:text="@string/subtitle_info4"/>

        <ImageButton
            android:id="@+id/info_map"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:src="@drawable/google_maps_app" />

    </LinearLayout>
</ScrollView>